# LinuxArmService

./: CMakeLists.txt  README.md  main.cpp
doc/: ubuntu22.4环境配置.txt  开启热点.txt  开机自启动.txt
